# SIYUAN-COMPASS

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: admin.py  assessments.py  auth.py  feedback.py  llm.py  reports.py
backend/app/core/: config.py
backend/app/llm/: deepseek.py  kimi.py  provider.py
backend/app/schemas/: assessment.py  auth.py  generation_job.py  profile.py  report.py
backend/app/services/: assessment_validator.py  auth.py  generation_jobs.py  profile_analyzer.py  profile_builder.py  profile_classifier.py  profile_prompt.py  question_rules.py  report_generator.py  report_prompt.py  report_quality_check.py
backend/app/storage/: json_db.py
backend/tests/: test_assessment_questionnaire_update.py  test_auth_password_change.py  test_json_storage.py  test_llm_provider.py  test_postgres_storage_schema.py  test_report_quality_check.py
docs/: system-overview.md  修改方案v2.md  实现文档.md  思源Compass测评问卷清单.docx  生涯问卷更新版.docx  表格_20260527 (1).csv  问题清单.docx
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: admin.ts  assessments.ts  auth.ts  client.ts  reports.ts
frontend/src/app/: App.tsx
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/: FormControls.tsx  (+1 more)
scripts/: build_questionnaire_docx.py
(+14 files in other folders)
