[project]
name = "siyuan-compass-backend"
version = "0.1.0"
description = "FastAPI backend for Siyuan Compass."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
